# ex4

./: .gitignore  details.txt
src/: AStarProblem.cpp  AStarProblem.hpp  BFSProblem.cpp  BFSProblem.hpp  BestFSProblem.cpp  BestFSProblem.hpp  CMakeLists.txt  Cache.cpp  Cache.hpp  ClientHandler.hpp  DFSProblem.cpp  DFSProblem.hpp  Direction.hpp  ErrorCode.hpp  FindGraphPath.cpp  FindGraphPath.hpp  FindGraphPathInfo.cpp  FindGraphPathInfo.hpp  GraphElement.cpp  GraphElement.hpp  GraphPath.cpp  GraphPath.hpp  GraphPathService.cpp  GraphPathService.hpp  MatrixCreate.cpp  MatrixCreate.hpp  MessageStructure.cpp  MessageStructure.hpp  ParallelServer.cpp  ParallelServer.hpp  Problem.hpp  ProblemException.cpp  ProblemException.hpp  ProblemInput.cpp  ProblemInput.hpp  ProblemSolver.cpp  ProblemSolver.hpp  README.md  ReaderServer.cpp  ReaderServer.hpp  (+13 more)
src/matrix/: ErrorCode.h  Matrix.cpp  Matrix.h  Matrix.hpp  MatrixException.cpp  MatrixException.hpp
